frontend/tests/cases/positive/polymorphism/polymorph.gr
id : forall a. a -> a
id x = x

bar : forall d e. (d × e) -> (d × e)
bar (x, y) = (y, x)

