frontend/tests/cases/negative/duplicate-patterns.gr
-- Should give a duplicate pattern error for x and y, before anything else.
foo : () -> ()
foo x x y y z Foo Foo = ()
